[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/LifeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gui/EnergyBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/gui/Counters.tscn" type="PackedScene" id=4]

[node name="GUI" type="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1366.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "custom_constants" ]

[node name="Tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="Tween2" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="HBox" type="HBoxContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1346.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Bars" type="VBoxContainer" parent="HBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1110.0
margin_bottom = 97.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Size Flags" ]

[node name="LifeBar" parent="HBox/Bars" index="0" instance=ExtResource( 2 )]

margin_right = 1110.0

[node name="EnergyBar" parent="HBox/Bars" index="1" instance=ExtResource( 3 )]

margin_top = 57.0
margin_right = 1110.0
margin_bottom = 97.0

[node name="Counters" parent="HBox" index="1" instance=ExtResource( 4 )]

margin_left = 1114.0
margin_top = 0.0
margin_right = 1326.0
margin_bottom = 50.0
size_flags_vertical = 0
_sections_unfolded = [ "Rect", "Size Flags" ]


